# spellcaster-facets

./: .gitignore  .gitmodules  .solhint.json  Cargo.toml  Dockerfile  README.md  foundry.toml  hardhat.config.js  hardhat.config.ts  package.json  remappings.txt  run-gh-actions.sh  tsconfig.json
.cargo/: config
.github/workflows/: ci.yml
contracts/: ERC1155Consumer.sol  ERC20Consumer.sol  ERC721Consumer.sol  NFTConsumer.sol  World.sol  WorldSimpleCrafting.sol  WorldStakingERC1155.sol  WorldStakingERC20.sol  WorldStakingERC721.sol
contracts/interfaces/: INFTConsumer.sol
contracts/libraries/: WorldStateStorage.sol
docs/: book.toml
docs/src/: SUMMARY.md
script/test_only/: bytes.rs  get_facet_selectors.rs
solhint/spellcaster/: package.json  tsconfig.json
src/: ERC20Consumer.sol  ERC721Consumer.sol  Modifiers.sol  SimpleCrafting.sol  StakingERC1155.sol  StakingERC20.sol  StakingERC721.sol  WorldSimpleCrafting.sol  WorldStakingERC1155.sol  WorldStakingERC20.sol  WorldStakingERC721.sol
test/: Emitter.t.sol  GuildManager.Meta.t.sol  GuildManager.t.sol  GuildToken.Meta.t.sol  GuildToken.MetaTx.t.sol  GuildToken.t.sol  MetaTxFacet.t.sol  OffchainAssetVault.t.sol  OffchainAssetVaultManager.t.sol  OrganizationFacet.t.sol  PaymentsFacet.t.sol  PaymentsFacet.v2.t.sol  PaymentsReceiver.t.sol  PaymentsReceiver.v2.t.sol  SimpleCrafting.t.sol  StakingERC1155.t.sol  StakingERC20.t.sol  StakingERC721.t.sol  WorldStakingERC1155.t.sol  WorldStakingERC20.t.sol  WorldStakingERC721.t.sol  world.js  world1155.js  world20.js  world721.js  world721staking.js
(+260 files in other folders)
