[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["Me"]

edition = "2021"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
base64 = "0.13.0"
rustc-hex = "2.1.0"
substring = "1.4.5"
itertools = "0.8"

[[bin]]
name = "get_facet_selectors"
path = "script/test_only/get_facet_selectors.rs"