[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["Me"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
rustc-hex = "2.1.0"
hex = "0.4.3"
itertools = "0.8"
ethabi = "18.0.0"
bytes = "1.4.0"
open-fastrlp = "0.1.4"
thiserror = "1.0.38"

[[bin]]
name = "get_facet_selectors"
path = "script/test_only/get_facet_selectors.rs"